--- a/angular1.x/index.html
+++ b/angular1.x/index.html
@@ -13,40 +13,45 @@
   <section class="todoapp">
     <header class="header">
       <h1>todos</h1>
-      <input class="new-todo" placeholder="What needs to be done?" autofocus>
+      <form id="todo-form" ng-submit="submitTask()">
+        <input class="new-todo" placeholder="What needs to be done?" autofocus ng-model="task">
+      </form>
     </header>
 
     <section class="main">
-      <input id="toggle-all" class="toggle-all" type="checkbox">
+      <input id="toggle-all" class="toggle-all" type="checkbox" ng-click="changeStatus()" ng-model="status">
       <label for="toggle-all">Mark all as complete</label>
-      <ul class="todo-list">
 
-        <li ng-repeat="item in taskList" ng-class="{'completed':item.isCompleted,'editing':item.isEdit}">
+      <ul class="todo-list">
+        <li ng-repeat="item in taskList | filter:{isCompleted : condition }" ng-class="{'completed':item.isCompleted,'editing':item.isEdit}">
           <div class="view">
-            <input class="toggle" type="checkbox" checked>
-            <label>{{ item.name }}</label>
-            <button class="destroy"></button>
+            <input class="toggle" type="checkbox" ng-model="item.isCompleted">
+            <label ng-dblclick="modifyData(item.id)">{{ item.name }}</label>
+            <button class="destroy" ng-click="deleteTask(item.id)"></button>
           </div>
-          <input class="edit" value="Create a TodoMVC template">
+          <form>
+            <input class="edit" ng-model="item.name" ng-blur="blurFn()">
+          </form>
         </li>
       </ul>
+
     </section>
     <footer class="footer">
       <!-- This should be `0 items left` by default -->
       <span class="todo-count">
-        <strong>0</strong> item left</span>
+        <strong>{{ calcNumber() }}</strong> item left</span>
       <ul class="filters">
         <li>
-          <a class="selected" href="#/">All</a>
+          <a ng-click="filterTask('All')" class="selected" href="javascript:;">All</a>
         </li>
         <li>
-          <a href="#/active">Active</a>
+          <a ng-click="filterTask('Active')" href="javascript:;">Active</a>
         </li>
         <li>
-          <a href="#/completed">Completed</a>
+          <a ng-click="filterTask('Completed')" href="javascript:;">Completed</a>
         </li>
       </ul>
-      <button class="clear-completed">Clear completed</button>
+      <button class="clear-completed" ng-click="clearData()">Clear completed</button>
     </footer>
   </section>
 
