add react init+todomvc-tpl * subject
* Body
 * what
 * why
 * how
* Footer

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
           angular 1.x
         </a>
       </li>
+      <li>
+        <a href="./react/index.html">
+          react
+        </a>
+      </li>
 
     </ol>
 </div>
