--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </a>
       </li>
       <li>
-        <a href="./react/index.html">
-          react
+        <a href="./react/react-todolist.html">
+         react-todolist
         </a>
       </li>
 
