--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </a>
       </li>
       <li>
-        <a href="./react/react-todolist.html">
+        <a href="./react-todolist/index.html">
          react-todolist
         </a>
       </li>
