--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
           react
         </a>
       </li>
-       <li>
+      <li>
         <a href="./vue/index.html">
           vue
+        </a>
+      </li>
+      <li>
+        <a href="./react+redux/index.html">
+          react+redux
         </a>
       </li>
     </ol>
