--- a/index.html
+++ b/index.html
@@ -62,13 +62,18 @@
         </a>
       </li>
       <li>
+        <a href="./react+redux/index.html">
+          react+redux
+        </a>
+      </li>
+      <li>
         <a href="./vue/index.html">
           vue
         </a>
       </li>
       <li>
-        <a href="./react+redux/index.html">
-          react+redux
+        <a href="./vue+vuex/index.html">
+          vue+vuex
         </a>
       </li>
     </ol>
