style: react+typescript

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
         </a>
       </li>
       <li>
+        <a href="./react+typescript/index.html">
+          react+typescript
+        </a>
+      </li>
+      <li>
         <a href="./vue/index.html">
           vue
         </a>
