--- a/javascript/index.html
+++ b/javascript/index.html
@@ -46,13 +46,13 @@
         <span class="todo-count"> <strong>0</strong> item left</span>
         <ul class="filters">
           <li>
-            <a class="selected" href="#/">All</a>
+            <a class="all selected">All</a>
           </li>
           <li>
-            <a href="#/active">Active</a>
+            <a class="active">Active</a>
           </li>
           <li>
-            <a href="#/completed">Completed</a>
+            <a class="completed">Completed</a>
           </li>
         </ul>
         <button class="clear-completed">Clear completed</button>
