upd: gh-pages for javascript

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
     <p></p>
     <ol>
       <li>
+        <a href="./javascript/index.html">
+          javascript
+        </a>
+      </li>
+      <li>
         <a href="./angular1.x/index.html">
           angular 1.x
         </a>
