deploy: gh-pages for typescript

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
           vue+vuex
         </a>
       </li>
+      <li>
+        <a href="./typescript/index.html">
+          typescript
+        </a>
+      </li>
     </ol>
   </div>
 </html>
